--- a/app/views/donasi/pembayaran/transaksi.html
+++ b/app/views/donasi/pembayaran/transaksi.html
@@ -42,7 +42,7 @@
         <div class="col-12 col-md-8 col-lg-6">
             <div class="row align-item-center bg-white shadow-lg p-3 rounded-box g-3">
                 <h6>Rincian Donasi</h6>
-                <div class="col-12">
+                <div class="col-12 my-3">
                     <div class="row">
                         <div class="col fw-bold">
                             Nama 
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 mt-0">
+                <div class="col-12 my-3">
                     <div class="row">
                         <div class="col fw-bold">
                             Nominal Donasi
@@ -63,7 +63,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 mt-0 mb-1">
+                <div class="col-12 my-3">
                     <div class="row">
                         <div class="col fw-bold">
                             Metode Bayar
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 mt-0">
+                <div class="col-12 my-3">
                     <div class="row">
                         <div class="col fw-bold">
                             Status 
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 mt-0">
+                <div class="col-12 my-3">
                     <div class="row">
                         <div class="col fw-bold">
                             Bantuan Untuk 
