--- a/public/assets/route/admin/pages/css/donasi.css
+++ b/public/assets/route/admin/pages/css/donasi.css
@@ -144,6 +144,14 @@ table .avatar {
     max-width: 60px;
 }
 
+.form-label-group label {
+    left: 1.25em !important;
+}
+
+.form-label-group input {
+    padding: 1em 1.25em !important;
+}
+
 /* Media Query */
 @media (min-width: 425px) and (max-width: 768px) {
     #cp-card .col-3 {
@@ -155,6 +163,7 @@ table .avatar {
         max-width: 68px;
     }
 }
+
 @media (min-width: 768px) {
     /* Percobaan */
     #main-content .row .col-xl-8~.col-xl-4>.row {
