menambahkan route marketing untuk digital marketing dan mengubah aturan daftar donatur mandiri

--- a/app/views/donatur/home/index.html
+++ b/app/views/donatur/home/index.html
@@ -99,68 +99,71 @@
                         </tr>
                     </thead>
                     <tbody<?= (isset($this->data['limit']) ? ' data-limit="'. $this->data['limit'] .'"' : '') ?>>
-                        <?php if (!is_null($data['donasi_donatur'])) {
+                        <?php 
+                        if (count(is_countable($data['donasi_donatur']) ? $data['donasi_donatur'] : []) > 0) {
                             foreach($data['donasi_donatur'] as $data_donasi) { ?>
-                        <tr>
-                            <th scope="row">
-                                <div class="media align-items-center">
-                                    <a target="_blank" href="<?= '/bantuan/detil/'. $data_donasi->id_bantuan; ?>"
-                                        data-nama-bantuan="<?= $data_donasi->nama_bantuan; ?>">
-                                        <span class="name mb-0 text-sm font-weight-bolder">
-                                            <?= $data_donasi->nama_bantuan; ?>
-                                        </span>
-                                    </a>
-                                </div>
-                            </th>
-                            <td class="text-right">
-                                <b data-id-donasi="<?= $data_donasi->id_donasi; ?>">
-                                    <?= $data_donasi->jumlah_donasi; ?>
-                                </b>
-                            </td>
-                            <td>
-                                <?= '<div class="channel-payment d-flex justify-content-between align-items-center">
-                                        <p class="text-info m-0" data-jenis-cp="' . $data_donasi->jenis_cp . '">'. Utility::keteranganJenisChannelPayment($data_donasi->jenis_cp) .'</p>
-                                        <img class="img-fluid" src="'. $data_donasi->path_gambar_cp .'" alt="'. $data_donasi->nama_cp .'"' . ($data_donasi->jenis_cp == "TN" ? ' style="width: 42px;"' : '') . '>
-                                    </div>';
-                                ?>
-                            </td>
-                            <td>
-                                <?= '<span class="badge badge-pill ' . ($data_donasi->bayar != 1 ? 'badge-warning">Belum Bayar' : 'badge-success">Sudah Bayar') . '</span>'; ?>
-                                <?= (!empty($data_donasi->waktu_bayar) ? '<div class="ml-2">' . $data_donasi->waktu_bayar . '</div>' :  ''); ?>
-                            </td>
-                            <td>
-                                <a class="font-weight-bolder" href="javascript:;">
-                                    <?= $data_donasi->id_donasi; ?>
-                                </a>
-                                <div class="font-weight-bold text-black-50">
-                                    <?= $data_donasi->create_at; ?>
-                                </div>
-                            </td>
-                            <td class="text-right">
-                                <!-- Ini nanti dihilangkan setelah fitur halaman detil donasi dibuat -->
-                                <div class="dropdown">
-                                    <a class="btn btn-sm btn-icon-only text-light" href="#" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <i class="fas fa-ellipsis-v"></i>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                        <!-- <a class="dropdown-item font-weight-600 text-green" href="<?= '/donatur/donasi/data/'. $data_donasi->id_donasi ?>">Lihat Lebih Detil</a> -->
-                                        <?php if ($data_donasi->bayar != 1 && isset($data_donasi->id_cp)) { ?>
-                                        <a href="javascript:;" class="dropdown-item text-warning font-weight-bolder"
-                                            role="button" data-toggle="modal" data-target="#modalGantiMetodePembayaran"
-                                            data-cp="<?= $data_donasi->id_cp; ?>">Ganti Metode Bayar</a>
-                                        <?php } else {
-                                            ?>
-                                        <a class="dropdown-item" data-id="<?= $data_donasi->id_donasi ?>"
-                                            href="javascript():;" data-toggle="modal"
-                                            data-target="#modalKuitansiDonasi">Kuitansi</a>
-                                        <?php
-                                        } ?>
-                                    </div>
-                                </div>
-                            </td>
-                        </tr>
-                        <?php }} else {
+                                <tr>
+                                    <th scope="row">
+                                        <div class="media align-items-center">
+                                            <a target="_blank" href="<?= '/bantuan/detil/'. $data_donasi->id_bantuan; ?>"
+                                                data-nama-bantuan="<?= $data_donasi->nama_bantuan; ?>">
+                                                <span class="name mb-0 text-sm font-weight-bolder">
+                                                    <?= $data_donasi->nama_bantuan; ?>
+                                                </span>
+                                            </a>
+                                        </div>
+                                    </th>
+                                    <td class="text-right">
+                                        <b data-id-donasi="<?= $data_donasi->id_donasi; ?>">
+                                            <?= $data_donasi->jumlah_donasi; ?>
+                                        </b>
+                                    </td>
+                                    <td>
+                                        <?= '<div class="channel-payment d-flex justify-content-between align-items-center">
+                                                <p class="text-info m-0" data-jenis-cp="' . $data_donasi->jenis_cp . '">'. Utility::keteranganJenisChannelPayment($data_donasi->jenis_cp) .'</p>
+                                                <img class="img-fluid" src="'. $data_donasi->path_gambar_cp .'" alt="'. $data_donasi->nama_cp .'"' . ($data_donasi->jenis_cp == "TN" ? ' style="width: 42px;"' : '') . '>
+                                            </div>';
+                                        ?>
+                                    </td>
+                                    <td>
+                                        <?= '<span class="badge badge-pill ' . ($data_donasi->bayar != 1 ? 'badge-warning">Belum Bayar' : 'badge-success">Sudah Bayar') . '</span>'; ?>
+                                        <?= (!empty($data_donasi->waktu_bayar) ? '<div class="ml-2">' . $data_donasi->waktu_bayar . '</div>' :  ''); ?>
+                                    </td>
+                                    <td>
+                                        <a class="font-weight-bolder" href="javascript:;">
+                                            <?= $data_donasi->id_donasi; ?>
+                                        </a>
+                                        <div class="font-weight-bold text-black-50">
+                                            <?= $data_donasi->create_at; ?>
+                                        </div>
+                                    </td>
+                                    <td class="text-right">
+                                        <!-- Ini nanti dihilangkan setelah fitur halaman detil donasi dibuat -->
+                                        <div class="dropdown">
+                                            <a class="btn btn-sm btn-icon-only text-light" href="#" role="button"
+                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                <i class="fas fa-ellipsis-v"></i>
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
+                                                <!-- <a class="dropdown-item font-weight-600 text-green" href="<?= '/donatur/donasi/data/'. $data_donasi->id_donasi ?>">Lihat Lebih Detil</a> -->
+                                                <?php if ($data_donasi->bayar != 1 && isset($data_donasi->id_cp)) { ?>
+                                                <a href="javascript:;" class="dropdown-item text-warning font-weight-bolder"
+                                                    role="button" data-toggle="modal" data-target="#modalGantiMetodePembayaran"
+                                                    data-cp="<?= $data_donasi->id_cp; ?>">Ganti Metode Bayar</a>
+                                                <?php } else {
+                                                    ?>
+                                                <a class="dropdown-item" data-id="<?= $data_donasi->id_donasi ?>"
+                                                    href="javascript():;" data-toggle="modal"
+                                                    data-target="#modalKuitansiDonasi">Kuitansi</a>
+                                                <?php
+                                                } ?>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                        <?php 
+                            }
+                        } else {
                             Ui::tableIsNull(6,'Donasi & Tagihanku');
                         } ?>
                         </tbody>
