--- a/app/views/donatur/tagihan/index.html
+++ b/app/views/donatur/tagihan/index.html
@@ -103,7 +103,7 @@
                                     <?php 
                                                 }
                                             } else {
-                                            
+                                                echo '<tr><td colspan="4">Belum ada data Donasi</td></tr>';
                                             }
                                         } else {
                                             echo '<tr><td colspan="4">Belum ada data Donasi</td></tr>';
