--- a/public/assets/route/admin/core/css/admin-style.css
+++ b/public/assets/route/admin/core/css/admin-style.css
@@ -98,6 +98,10 @@ body {
     transform: rotate(90deg);
 }
 
+.nav-item .nav-link.active.active-pro {
+    position: relative !important;
+}
+
 .table .tfoot-light th {
     color: #8898aa;
     background-color: #f6f9fc;
