--- a/app/views/marketing.html
+++ b/app/views/marketing.html
@@ -17,11 +17,11 @@
     <link href="/vendors/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
     <!-- Vendor -->
     <link href="/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Argon CSS -->
-    <link type="text/css" href="/assets/main/css/argon.min.css" rel="stylesheet">
     <!-- Core Style -->
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
+    <!-- Argon CSS -->
+    <link type="text/css" href="/assets/main/css/argon.min.css" rel="stylesheet">
 </head>
 
 <body<?= (isset($this->data['uri']) ? ' data-uri="'. $this->data['uri'] .'"' : '') ?>
@@ -99,7 +99,7 @@
                                     </span>
                                     <div class="media-body ml-2  d-none d-lg-block">
                                         <span class="mb-0 text-sm  font-weight-bold">
-                                            <?= ucwords(strtolower($data['donatur']->nama)) ?>
+                                            <?= ucwords(strtolower($data['marketing']->nama)) ?>
                                         </span>
                                     </div>
                                 </div>
