--- a/public/assets/route/admin/pages/css/donasi.css
+++ b/public/assets/route/admin/pages/css/donasi.css
@@ -144,12 +144,17 @@ table .avatar {
     max-width: 60px;
 }
 
+.form-label-group input:not(:placeholder-shown)~label {
+    left: 1.5em !important;
+}
+
 .form-label-group label {
     left: 1.25em !important;
 }
 
 .form-label-group input {
-    padding: 1em 1.25em !important;
+    padding-left: 1.25em !important;
+    padding-right: 1.25em !important;
 }
 
 /* Media Query */
