--- a/app/views/marketing.html
+++ b/app/views/marketing.html
@@ -106,8 +106,12 @@
                             </a>
                             <div class="dropdown-menu  dropdown-menu-right">
                                 <div class="dropdown-header noti-title">
-                                    <h6 class="text-overflow m-0">Welcome!</h6>
+                                    <h6 class="text-overflow m-0">Atur</h6>
                                 </div>
+                                <a href="/donatur" class="dropdown-item">
+                                    <i class="ni ni-tv-2"></i>
+                                    <span>Sebagai Donatur</span>
+                                </a>
                                 <?php if ($this->getController() != "profile") {
                                     echo '<a href="/donatur/profile" class="dropdown-item">
                                         <i class="ni ni-single-02"></i>
