--- a/app/views/default/campaign/tag.html
+++ b/app/views/default/campaign/tag.html
@@ -1,11 +1,11 @@
-<section id="content">
+<section id="content" class="bg-light">
     <div class="container">
         <div class="row justify-content-center">
             <div id="campaign" class="col-lg-8 px-md-0 mx-lg-1">
                 <?= (isset($data['campaign']) ? $data['campaign']->isi: ''); ?>
             </div>
-            <div class="d-flex gap-3 justify-content-center position-fixed border-top border-light">
-                <a href="<?= '/donasi/buat/' . (!is_null($data['campaign']->tag) ? $data['campaign']->tag : 'baru/'. $data['campaign']->id_bantuan); ?>"
+            <div class="d-flex gap-3 justify-content-center position-fixed border-top border-light shadow-sm">
+                <a href="<?= '/donasi/buat/' . (!is_null($data['campaign']->tag) ? $data['campaign']->tag : 'baru/'. $data['campaign']->id_bantuan) .'/inbound-marketing'; ?>"
                     class="btn button donasi btn-lg shadow-none w-50">Donasi Sekarang</a>
             </div>
         </div>
